# NeuralSpace

./: .dockerignore  .gitattributes  .gitignore  BENCHMARK.md  Dockerfile  README.md  WHITEPAPER.md  adversarial_test.py  adversarial_trainer.py  aggregator.py  custom_rules.yaml  docker-compose.yaml  download_dataset.py  github_app.py  procfile  pyproject.toml  requirements.txt  research_paper.html  run_benchmark.py  test-pr-file.txt  trust_registry.json  white_paper.html
.github/workflows/: neuralspace-scan.yaml  neuralspace-scan.yml
neuralspace/: ast_analyzer.py  ast_tokenizer.py  atoms.py  cli.py  data_flow.py  engine.py  federated_learning.py  hive_mind.py  scanner.py  synthetic_generator.py  tokenizer.py  trainer.py  trust_layer.py  watcher.py
neuralspace_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: adversarial_test.py  adversarial_trainer.py  create_c_benchmark.py  download_osv.py  download_real_dataset.py  run_benchmark_osv.py
test_codebase/: complex_safe.py  novel_safe.py  unknown_script.py
test_js/: evil.js  evil2.js  evil3.js  real_taint.js
test_py/: evil.py
test_rs/: evil.rs
tests/test_go/: evil.go
tests/test_ts/: evil.ts
training_data/safe/: adv_safe_1.py  adv_safe_2.py  safe_1.py  safe_2.py  safe_3.js  safe_4.go  safe_5.py  safe_6.js  synth_safe_1.py  synth_safe_10.py  synth_safe_11.py  synth_safe_12.py  synth_safe_13.py  synth_safe_14.py  synth_safe_15.py  synth_safe_16.py  synth_safe_17.py  synth_safe_18.py  synth_safe_19.py  synth_safe_2.py  synth_safe_20.py  synth_safe_21.py  synth_safe_22.py  synth_safe_23.py  synth_safe_24.py  synth_safe_25.py  synth_safe_26.py  synth_safe_27.py  synth_safe_28.py  synth_safe_29.py  synth_safe_3.py  synth_safe_30.py  synth_safe_31.py  synth_safe_32.py  synth_safe_33.py  synth_safe_34.py  synth_safe_35.py  synth_safe_36.py  synth_safe_37.py  synth_safe_38.py  (+18 more)
training_data/threat/: adv_threat_11.py  adv_threat_12.py  adv_threat_13.py  adv_threat_14.py  adv_threat_15.py  adv_threat_16.py  adv_threat_17.py  adv_threat_18.py  adv_threat_2.py  adv_threat_5.py  adv_threat_6.py  adv_threat_8.py  mal_1.py  mal_2.py  mal_3.js  mal_4.js  mal_5.go  mal_6.go  mal_7.py  mal_8.js  synth_threat_1.py  synth_threat_10.py  synth_threat_11.py  synth_threat_12.py  synth_threat_13.py  synth_threat_14.py  synth_threat_15.py  synth_threat_16.py  synth_threat_17.py  synth_threat_18.py  synth_threat_19.py  synth_threat_2.py  synth_threat_20.py  synth_threat_21.py  synth_threat_22.py  synth_threat_23.py  (+38 more)
