[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralspace-ai"
version = "4.1.2"
description = "Cognitive Code Security Engine - Self-evolving, AI-powered threat detection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "NeuralSpace Team", email = "team@neuralspace.ai"}]
dependencies = [
    "torch",
    "watchdog",
    "filelock",
    "click",
    "scipy",
    "numpy",
    "pandas",
    "statsmodels",
    "fastapi",
    "uvicorn",
    "requests",
    "PyGithub",
    "pyyaml",
    "cryptography",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust"
]

[project.scripts]
neuralspace = "neuralspace.cli:cli"

[tool.setuptools.packages.find]
include = ["neuralspace*"]
exclude = ["test_codebase*", "training_data*", "test_*"]

[tool.setuptools.package-data]
neuralspace = ["atom_weights.pth", "custom_rules.yaml"]